--- a/GetBusRouteBus.html
+++ b/GetBusRouteBus.html
@@ -16,14 +16,22 @@
 	//获取公交时间和距离
 	var searchCompleteBus = function (results){
 		if (transitBus.getStatus() != BMAP_STATUS_SUCCESS){
-			return ;
+		computeNext();
+	//		return ;
 		}
 		//获取具体的时间和距离
 		var plan = results.getPlan(0);
-		busDis=plan.getDistance(true);
-		busTime=plan.getDuration(true);
-		result+=busDis+","+busTime+"\n";
+		try{
+			busDis=plan.getDistance(true);
+			busTime=plan.getDuration(true);
+			result+=busDis+","+busTime+"\n";
+		}
+		catch (e) {
+			result+="\n";
+		}
+		computeNext();
 		
+		function computeNext(){
 		//第一个点不动，获取第二个点
 		if(circulation_count2!==allPts.length-2){
 			circulation_count2+=1;
@@ -45,6 +53,7 @@
 			var p2 = new BMap.Point(allPts[circulation_count2].lon,allPts[circulation_count2].lat);
 			computeRoute(p1,p2);
 			result+=circulation_count1+","+circulation_count2+","+allPts[circulation_count1].region+","+allPts[circulation_count2].region+",";
+		}
 		}
 	}
 	
